# abb-ros-catkin

./: README.md
robot_comm/: CMakeLists.txt  package.xml
robot_comm/src/: robot_comm.cpp  robot_comm.h
robot_node/: CMakeLists.txt  package.xml
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/: system.xml
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/BACKINFO/: backinfo.txt  controller.rsf  fpsystem.xml  key.id  program.id  rw6system.xml  system.guid  template.guid
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/HOME/: ._user.sys
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/HOME/ProdScr/code/: ProdScr.sys
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/RAPID/TASK1/PROGMOD/: SERVER.mod
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/RAPID/TASK1/SYSMOD/: ProdScr.sys
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/RAPID/TASK2/PROGMOD/: SERVER.mod
robot_node/ABBInterpreter/RapidServer/Yumi-NonEGM-Synchro_2019-02-08/SYSPAR/: EIO.cfg  MOC.cfg
robot_node/ABBInterpreter/include/: ABBInterpreter.h
robot_node/ABBInterpreter/src/: ABBInterpreter.cpp
robot_node/include/: EGMHelper.hpp  ROSHelper.hpp  RobotHelper.hpp  robot_node.h
robot_node/launch/: mcubeSystem.launch
robot_node/parameters/: mcubeRobotParams.yaml
robot_node/src/: robot_node.cpp  robot_node.h
robot_node/src/EGMControl/: EGMHelper.cpp  ROSHelper.cpp  RobotHelper.cpp
robot_node/src/PracticalSocket/: PracticalSocket.cpp
(+6 files in other folders)
